refactor: Rearchitect the agent communication model
Key Achievements:
- Created the injectable "ai-assistant" widget using Preact and TypeScript, ensuring minimal impact on the host application (Online Boutique).
- Solved CSS conflicts using a Shadow DOM and browser compatibility issues (`crypto.randomUUID`) with robust fallbacks.
- Developed the Vue.js 3 management dashboard for real-time task monitoring, connecting directly to Firestore's `onSnapshot` listener.
- Configured the GKE Ingress to correctly route traffic to both the dashboard and the API backend.
- Created a standalone `CrawlerService` on Cloud Run to ingest and index websites into a knowledge base.
- Integrated Vertex AI Vector Search as the core of the RAG system.
- Evolved the architecture to a more sophisticated model:
  - A `Proxy Agent` now handles all public-facing conversations.
  - The `Orchestrator Agent` acts as an internal "General Manager," delegating complex tasks received from the Proxy Agent.
- All agents are now grounded by the RAG knowledge base.
- Wrote the final version of the `README.md`, detailing the project's vision, features, and the Human-AI collaboration methodology.
- Created a comprehensive set of professional architecture diagrams using Mermaid, including a system component diagram and a core workflow sequence diagram.
- Verified that all content aligns with the hackathon submission requirements.

Project Timeline & Milestones:
- Day 4-5 (Sept 16-17): Frontend development and integration. The system now has a user-facing component and a management interface.
- Day 6 (Sept 18): Advanced backend architecture and RAG implementation.
- Day 7 (Sept 19): Documentation and presentation preparation.
- Day 8-9 (Sept 20-21): Final testing, video production, and submission packaging.

--- a/k8s/omni-agent-deployment.yaml
+++ b/k8s/omni-agent-deployment.yaml
@@ -19,6 +19,7 @@ spec:
       containers:
         - name: omni-agent-container
           image: asia-east1-docker.pkg.dev/gke-10-hackathon-471902/ai-agents-repo/ai-agent-base:latest
+          imagePullPolicy: Always
           command: ["python", "/workspace/app/workers/omni_agent_worker.py"]
           resources:
             requests:
