--- a/k8s/proxy-agent-deployment.yaml
+++ b/k8s/proxy-agent-deployment.yaml
@@ -19,9 +19,22 @@ spec:
       containers:
         - name: proxy-agent-container
           image: asia-east1-docker.pkg.dev/gke-10-hackathon-471902/ai-agents-repo/ai-agent-base:latest
+          imagePullPolicy: Always
           command: ["uvicorn", "app.workers.proxy:app", "--host", "0.0.0.0", "--port", "8000"]
           ports:
             - containerPort: 8000
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: 8000
+            initialDelaySeconds: 5
+            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8000
+            initialDelaySeconds: 15
+            periodSeconds: 20
           resources:
             requests:
               cpu: "250m"
@@ -36,14 +49,11 @@ spec:
               value: "gke-10-hackathon"
             - name: PROXY_AGENT_SUBSCRIPTION_ID
               value: "proxy-agent-sub"
-            - name: GOOGLE_API_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: ai-agent-secrets
-                  key: google-api-key
+            - name: AGENT_REGISTRY_SUBSCRIPTION_ID
+              value: "rag-index"
             - name: PYTHONPATH
-              value: "/workspace"
-          workingDir: /workspace
+              value: "/code"
+          workingDir: /code
 
 ---
 
@@ -52,6 +62,9 @@ kind: Service
 metadata:
   name: proxy-agent-service
   namespace: ai-agents
+  annotations:
+    cloud.google.com/backend-config: '{"default": "proxy-agent-backend-config"}'
+    cloud.google.com/neg: '{"ingress": true}'
 spec:
   type: ClusterIP
   selector:
