--- a/app/.env.example
+++ b/app/.env.example
@@ -1,7 +1,6 @@
 GCP_PROJECT_ID="gcp-project-id"
 GCP_FIRESTORE_NAME="firestore_name"
-GOOGLE_APPLICATION_CREDENTIALS="google-credentials.json"
-GOOGLE_API_KEY="your-google-api-key"
+GOOGLE_APPLICATION_CREDENTIALS="/workspace/google-credentials.json"
 
 # K8s 配置
 GKE_CLUSTER_NAME="ai-agents-cluster"
@@ -9,4 +8,4 @@ GKE_CLUSTER_ZONE="asia-east1-a"
 
 PROXY_AGENT_SUBSCRIPTION_ID="proxy-agent-sub"
 AGENT_REGISTRY_SUBSCRIPTION_ID="agent-registry-updates-sub"
-
+CRAWLER_TOPIC_ID="rag-index"
