--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "vue": "^3.4.0",
-    "firebase": "^10.7.0"
+    "firebase": "^10.7.0",
+    "vue-i18n": "^9.8.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
