--- a/k8s/agent-registry-listener-deployment.yaml
+++ b/k8s/agent-registry-listener-deployment.yaml
@@ -19,7 +19,7 @@ spec:
       containers:
         - name: agent-registry-listener-container
           image: asia-east1-docker.pkg.dev/gke-10-hackathon-471902/ai-agents-repo/ai-agent-base:latest
-          command: ["python", "/workspace/app/shared_crew_lib/services/agent_registry_listener.py"]
+          command: ["python", "/code/app/shared_crew_lib/services/agent_registry_listener.py"]
           resources:
             requests:
               cpu: "100m"
@@ -35,5 +35,5 @@ spec:
             - name: AGENT_REGISTRY_SUBSCRIPTION_ID
               value: "agent-registry-updates-sub"
             - name: PYTHONPATH
-              value: "/workspace"
-          workingDir: /workspace
+              value: "/code"
+          workingDir: /code
