--- a/k8s/dashboard.yaml
+++ b/k8s/dashboard.yaml
@@ -22,6 +22,12 @@ spec:
             requests:
               cpu: "100m"
               memory: "128Mi"
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 5
+            periodSeconds: 10
 
 ---
 
@@ -30,6 +36,8 @@ kind: Service
 metadata:
   name: dashboard-service
   namespace: ai-agents
+  annotations:
+    cloud.google.com/neg: '{"ingress": true}'
 spec:
   type: ClusterIP
   selector:
