--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -3,17 +3,25 @@ kind: Ingress
 metadata:
   name: ai-system-ingress
   namespace: ai-agents
-  annotations:
-    kubernetes.io/ingress.class: "gce"
 spec:
-  defaultBackend:
-    service:
-      name: dashboard-service
-      port:
-        number: 80
+  ingressClassName: nginx
   rules:
   - http:
       paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: dashboard-service
+            port:
+              number: 80
+      - path: /conversation
+        pathType: Prefix
+        backend:
+          service:
+            name: proxy-agent-service
+            port:
+              number: 80
       - path: /api
         pathType: Prefix
         backend:
