--- a/app/.env.example
+++ b/app/.env.example
@@ -9,3 +9,8 @@ GKE_CLUSTER_ZONE="asia-east1-a"
 PROXY_AGENT_SUBSCRIPTION_ID="proxy-agent-sub"
 AGENT_REGISTRY_SUBSCRIPTION_ID="agent-registry-updates-sub"
 CRAWLER_TOPIC_ID="rag-index"
+
+# RAG 配置
+RAG_KB_ID="kb_id"
+RAG_ENDPOINT_NAME="kb-id-endpoint"
+RAG_DEPLOYED_INDEX_ID="deployed_kb_id"
