--- a/k8s/omni-agent-deployment.yaml
+++ b/k8s/omni-agent-deployment.yaml
@@ -42,4 +42,19 @@ spec:
                   key: google-api-key
             - name: PYTHONPATH
               value: "/workspace"
+            - name: RAG_KB_ID
+              valueFrom:
+                configMapKeyRef:
+                  name: rag-config
+                  key: RAG_KB_ID
+            - name: RAG_ENDPOINT_NAME
+              valueFrom:
+                configMapKeyRef:
+                  name: rag-config
+                  key: RAG_ENDPOINT_NAME
+            - name: RAG_DEPLOYED_INDEX_ID
+              valueFrom:
+                configMapKeyRef:
+                  name: rag-config
+                  key: RAG_DEPLOYED_INDEX_ID
           workingDir: /workspace
